# BasicEngine

./: CMakeLists.txt  main.cpp
core/: Core.cpp  Core.h
shader/: Shader.cpp  Shader.h
shaderFiles/: shader_texture.fs
